filter page , product list page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ColgateToothbruchCEC</string>
+    <string name="product_description">Colgate 360 4 Zone manual toothbrush provides a 4 zone bacteria removing action. The advanced multi-action brsitle design (vs. an ordinary flat trim toothbrush) and the innovative cheek, tongue cleaner design together remove bacteria from teeth ,tongue ,cheeks, and gurms.</string>
 </resources>
