Add the product brand filter function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">ColgateToothbruchCEC</string>
     <string name="product_description">Colgate 360 4 Zone manual toothbrush provides a 4 zone bacteria removing action. The advanced multi-action brsitle design (vs. an ordinary flat trim toothbrush) and the innovative cheek, tongue cleaner design together remove bacteria from teeth ,tongue ,cheeks, and gurms.</string>
     <string name="price_low_high">Price: Low to High</string>
@@ -6,4 +6,7 @@
     <string name="brand">Brand</string>
     <string name="bristle_type">Bristle Type</string>
     <string name="pack_size">Pack Size</string>
+
+    <string name="alert_find_brash">Please find the brush that is right for you.</string>
+
 </resources>
